[package]
edition = "2021"
name = "mexbot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
serde = "1.0.137"
serde_json = "1.0.81"
serenity = {version = "0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = {version = "1.19.2", features = ["rt-multi-thread"]}
